--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,6 +3,7 @@
         "adbsnmp",
         "Datapump",
         "emcc",
+        "exfilteration",
         "Harish",
         "IMPUSER",
         "Niddagatta",
